<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/menu_root"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/app_inname"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="45sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/menu"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
        >

            <Button
                android:id="@+id/btn_tren"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/btn_singin"
                android:fontFamily="@font/roboto_mono_bold"
                android:gravity="center"
                android:layout_marginBottom="75px"
                android:text="@string/btn_tren" />

            <Button
                android:id="@+id/btn_instructions"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/btn_singin"
                android:fontFamily="@font/roboto_mono_bold"
                android:gravity="center"
                android:layout_marginBottom="75px"
                android:text="@string/btn_instructions" />

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/btn_singin"
                android:fontFamily="@font/roboto_mono_bold"
                android:gravity="center"
                android:layout_marginBottom="75px"
                android:text="@string/btn_chat" />

            <Button
                android:id="@+id/btn_prof"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@drawable/btn_singin"
                android:fontFamily="@font/roboto_mono_bold"
                android:gravity="center"
                android:layout_marginBottom="75px"
                android:text="@string/btn_prof" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>