<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".TrainSelActivity"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/app_inname"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="45sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/txt_del_urov_sredn"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textprem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="..."
        android:textColor="@android:color/black"
        android:textSize="35sp" />


    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="60dp"
        android:id="@+id/otvet"
        android:hint="@string/Vvotvet"
        android:inputType="numberSigned"
        android:textColor="@color/colorAccent"
        android:textColorHint="#636363"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_otvet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Vvod"
        android:background="@drawable/btn_register"
        android:fontFamily="@font/roboto_mono_bold"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/Sled"
        android:background="@drawable/btn_singin"
        android:fontFamily="@font/roboto_mono_bold"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/btn_nazad2"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="60dp"
        android:text="@string/btn_back"
        android:background="@drawable/btn_singin"
        android:fontFamily="@font/roboto_mono_bold"
        />



</LinearLayout>