<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/app_inname"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="45sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="50px"
        android:scrollbars="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/instrukcii"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </ScrollView>

    <Button
        android:id="@+id/btn_nazad2"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50px"
        android:layout_height="60dp"
        android:text="@string/btn_back"
        android:background="@drawable/btn_singin"
        android:fontFamily="@font/roboto_mono_bold"
        />


</LinearLayout>