<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    android:id="@+id/root_glavn"
    tools:context=".GlavnActivity"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chelsea_market"
            android:text="@string/app_inname"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="45sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/chelsea_market"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    <TextView
        android:id="@+id/textname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textpocht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="23sp" />
    <TextView
        android:id="@+id/textright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="23sp" />
    <TextView
        android:id="@+id/textwrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="23sp" />
    <Button
        android:id="@+id/change"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_register"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/btn_changepass" />

    <Button
        android:id="@+id/changename"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_register"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/btn_changename" />


        <Button
            android:id="@+id/razlog"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/btn_exitprof" />
    <Button
        android:id="@+id/back1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_register"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/btn_back" />


    </LinearLayout>